fixed footer content, spacing issues, and added fontawesome icons

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -26,7 +26,7 @@
   nav {
     width: 100%;
     height: auto;
-    background-color: #0c0c0c;
+    background-color: #262626;
     padding: 1.5rem 0rem;
     position: relative;
   }
@@ -49,25 +49,6 @@
     color: orchid;
   }
 
-  /* button {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: linen;
-    text-decoration: none;
-    cursor: pointer;
-    padding: 10px 25px;
-    background-color: indigo;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: all 0.25s ease 0s;
-  } */
-
-  /* button:hover {
-    background-color: goldenrod;
-  } */
-
   body {
     width: 100%;
     display: flex;
@@ -79,7 +60,7 @@
     float: left;
     width: 60%;
     height: auto;
-    padding: 1rem 0rem 1rem 1rem;
+    padding: 1rem 0rem 1rem 3.5rem;
   }
 
   .content-left h2 {
@@ -87,12 +68,23 @@
     padding: 1rem;
   }
 
+  div {
+    display: flex;
+    padding: 1rem 0rem;
+  }
+
   .lessons {
     list-style: none;
+    padding: 0rem 0rem 2rem 1rem;
   }
 
   .lessons li {
     font-size: 16px;
+    padding: 0rem 0rem 1rem 0rem;
+  }
+
+  .lessons p {
+    line-height: 1.5rem;
   }
 
   .lessons li a {
@@ -108,36 +100,30 @@
 
   .lessons img {
     width: 100px;
-    min-height: 100px;
+    height: 100px;
     border-radius: 50%;
-    padding: 25px 50px;
+    /* padding: 25px 50px; */
     display: flex;
     justify-content: flex-start;
+    object-fit: cover;
+    object-position: left;
   }
-
-  /* img.1 {
-   overflow: hidden;
-   margin-left: -50px;
-  }
-
-  img.2 {
-   overflow: hidden;
-   margin-left: -50px;
-  } */
 
   .lessons li p {
     margin: auto;
-    padding: 35px;
+    padding: 0rem 2rem;
     text-align: left;
   }
 
   .content-right {
     position: relative;
-    top: 1rem;
+    top: 2rem;
+    right: 3.5rem;
     float: right;
-    width: 30%;
+    width: 25%;
     height: auto;
-    padding: 0rem 2rem;
+    border: solid;
+
   }
 
   .content-right a {
@@ -148,12 +134,18 @@
   }
 
   .content-right h3 {
-    padding: 1rem 0rem;
+    padding: 0rem 0rem 1rem 0rem;
+    text-align: center;
   }
 
   .content-right p {
     text-align: left;
     font-size: 16px;
+    line-height: 1.5rem;
+  }
+
+  .code-alongs {
+    padding: 1rem;
   }
 
   .code-alongs a:hover {
@@ -165,40 +157,68 @@
     height: auto;
     position: relative;
     display: block;
-    padding: 5rem;
+    padding: 1rem 1rem 5rem;
     text-align: center;
-    background: #0f0f0f;
+    background: #262626;
     border: 1rem double linen;
   }
 
-  footer p, a {
+  footer p {
     color: linen;
+    position: relative;
+    top: 4rem;
   }
 
   footer a {
+    color: linen;
     text-decoration: none;
     font-weight: bolder;
+    position: relative;
+    bottom: 4rem;
   }
 
   footer a:hover {
     color: orchid;
   }
 
+  .copyright {
+    color: grey;
+    font-size: 12px;
+  }
+
 /* End of styling for index.html. Start of styling for about-me.html */
 
   .about-me {
-    padding: 4rem;
+    padding: 4.5rem;
   }
 
   .about-me h2, h3 {
     padding: 1rem 0rem;
   }
 
-  .about-me p {
-    padding: 0rem 0rem 1rem;
+  .greeting {
+    display: block;
+    line-height: 1.5rem;
   }
-  .favorites {
+
+  .greeting p {
+    padding: 2rem;
+  }
+
+  .favorites, aside {
     padding: 0rem 2rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .favorites {
+    margin-left: 0rem;
+    width: 150%;
+    padding: 0rem 0rem 0rem 2rem;
+  }
+
+  .favorites h3 {
+    display: block;
   }
 
   .favorites li {
@@ -208,6 +228,8 @@
 
   .favorites li a {
     color: goldenrod;
+    text-decoration: none;
+    font-weight: bold;
   }
 
   .favorites li a:hover {
@@ -215,17 +237,47 @@
   }
 
   aside {
+    width: 50%;
+    height: auto;
     position: relative;
-    top: 2rem;
+    right: -4rem;
     border: 5px dotted;
     border-color: gray;
     padding: 1rem;
+    margin: -3.5rem 5.5rem 0rem 0rem;
+  }
+
+  aside p {
+    text-align: center;
+    font-size: 1.5rem;
   }
 
   aside a {
-    color: goldenrod;
+    color: purple;
+    text-decoration: none;
+    font-weight: bolder;
   }
 
   aside a:hover {
     color: orchid;
+  }
+
+  address {
+    line-height: 0rem;
+    position: relative;
+    top: 2rem;
+  }
+  address p {
+    padding: 1rem;
+    position: relative;
+    top: 1rem;
+  }
+
+  address a {
+    position: relative;
+    top: 0rem;
+  }
+
+  .contact {
+    text-decoration: underline;
   }
